tgBot without tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+telegram.bot.token=5997778811:AAFU49hly21jN8bR1oYGlMllTk3cgLRksK4
+logging.level.root=info
+spring.datasource.url=jdbc:postgresql://localhost:5432/skypro
+spring.datasource.username=postgres
+spring.datasource.password=[SunOmu66]
+spring.jpa.hibernate.ddl-auto=validate
 
+spring.liquibase.change-log=classpath:Liquibase/changelog-master.yml
